--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ DB_PORT=5432
 # Keycloak settings
 KEYCLOAK_USER=admin
 KEYCLOAK_PASSWORD=admin
+KEYCLOAK_PORT=8080
 KEYCLOAK_URL=http://keycloak:8080/auth
 KEYCLOAK_REALM=your_realm_name
 KEYCLOAK_CLIENT_ID=your_client_id
