--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   keycloak:
     image: quay.io/keycloak/keycloak:latest
     ports:
-      - 8080:8080
+      - ${KEYCLOAK_PORT}:8080
     environment:
       DB_VENDOR: POSTGRES
       DB_ADDR: postgres_keycloak
